person logo fix

--- a/main.css
+++ b/main.css
@@ -138,11 +138,19 @@ img {
 }
 .person {
     position: absolute;
-    top: 0px ;
-    left: 230px;  
-    z-index: 5 ;
+    top:0;
+    z-index: 2 ;
     width: 10vh;
     height: 10vh;
+    padding: 0;
+}
+.buttonP {
+    width: 10vh;
+    height: 10vh;
+    position: absolute;
+    top: 0px ;
+    left: 230px; 
+    z-index: 5 ;
 }
 #video {
     position: absolute;
@@ -154,12 +162,12 @@ img {
     position: absolute;
     top:0;
     left: 0;  
-    z-index: 2 ;
+    z-index: 4 ;
+    padding: 0;
 }
-#snap {
+#snap {   
     position: absolute;
-    top: 0px ;
-    left: 230px;    
+    top:0;
     z-index: 4 ;
     width: 10vh;
     height: 10vh;
@@ -188,8 +196,8 @@ img {
 .adress {
     display: inline-block;
     position: relative;
-    top:  10px;
-    left:  330px;
+    top:  15px;
+    left:  335px;
     float: left;
     width: 120px;
     position: fixed;
